# ai-cloud-finops

./: .gitignore  README.md  netlify.toml  pyproject.toml
.github/workflows/: deploy-pages.yaml  process-submission.yaml  reveal-answers.yaml
config/: members.yaml
config/weeks/: week-01.yaml  week-02.yaml  week-03.yaml  week-04.yaml  week-05.yaml  week-06.yaml  week-07.yaml  week-08.yaml  week-09.yaml  week-10.yaml
docs/: curriculum.md
docs/logs/: 2026-03-17_web-platform-implementation.md
frontend/: index.html  materials.html  profile.html  scores.html  submit.html
frontend/css/: style.css
frontend/js/: admin.js  app.js  materials.js  problems.js  profile.js  scores.js  submit.js
members/Pokingteeemo/: README.md
members/Pokingteemo/: README.md
members/dev-jiseok/: README.md
members/do-dop/: README.md
members/jud1thDev/: README.md
members/leejiseok/: README.md
members/m1cks/: README.md
members/seoyeon0201/: README.md
members/seoyoungleeme/: README.md
members/wsxchoi/: README.md
platform/: Makefile
platform/config/: group.yaml  members.yaml  slack.yaml
platform/docs/: PROJECT_STATUS.md  curriculum.md
platform/frontend/: admin.html  community-problems.html  create-problem.html  guide.html  index.html  materials.html  problems.html  profile.html  scores.html  submit.html
platform/scripts/: generate_week.py  score_submissions.py
scripts/: generate_week.py  parse_submission.py  reveal_answers.py  score_submissions.py
spec/: output_schema.json
src/finops_study/: cli.py  (+3 more)
tests/: conftest.py  test_catalog.py
weeks/: _index.json
(+163 files in other folders)
